--- a/src/app/comanda/comanda.component.html
+++ b/src/app/comanda/comanda.component.html
@@ -32,7 +32,7 @@
           </p>
 
           <p class="keepcomanda">
-            <input= type="checkbox" name="inServico"/>
+            <input type="checkbox" name="inServico"/>
             <label>Taxa de serviço</label>
           </p>
 
