--- a/src/app/comanda/comanda.component.html
+++ b/src/app/comanda/comanda.component.html
@@ -13,26 +13,26 @@
 
           <p>
             <label>Chopp</label>
-            <input type="text" name="inChopp" />
+            <input type="text" name="inChopp" formControlName="chopp" />
           </p>
 
           <p>
             <label>Pizzas</label>
-            <input type="text" name="inPizzas" />
+            <input type="text" Name="inPizzas" formControlName="pizzas" />
           </p>
 
           <p>
             <label>Recheios</label>
-            <input type="text" name="inRecheios" />
+            <input type="text" Name="inRecheios" formControlName="recheios" />
           </p>
 
           <p>
             <label>Pessoas</label>
-            <input type="text" name="inPessoas" />
+            <input type="text" Name="inPessoas" formControlName="pessoas" />
           </p>
 
           <p class="keepcomanda">
-            <input type="checkbox" name="inServico"/>
+            <input type="checkbox" Name="inServico" formControlName="servico"/>
             <label>Taxa de serviço</label>
           </p>
 
